--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -1,4 +1,10 @@
 @import './scss/theme';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
