feat: hide reload trigger initially

--- a/apps/client/src/app/todos/todos.component.html
+++ b/apps/client/src/app/todos/todos.component.html
@@ -1,5 +1,8 @@
 <h1 class="todo__h1">todos</h1>
-<dos-todo-updater (reload)="update$$.next()"></dos-todo-updater>
+<dos-todo-updater
+  *ngIf="showReload$ | async"
+  (reload)="update$$.next()"
+></dos-todo-updater>
 <ng-container *ngIf="todos$ | async as todos; else loadingIndicator">
   <dos-todo-counter
     [count]="todos.length"
