--- a/apps/client/src/app/todos/todos.component.html
+++ b/apps/client/src/app/todos/todos.component.html
@@ -1,4 +1,5 @@
 <h1 class="todo__h1">todos</h1>
+<button (click)="openSettings()">SETTINGS</button>
 <dos-todo-updater
   *ngIf="showReload$ | async"
   (reload)="update$$.next()"
