--- a/apps/client/src/scss/todos/_todo-input.scss
+++ b/apps/client/src/scss/todos/_todo-input.scss
@@ -1,4 +1,4 @@
-@import './todo-colours';
+@use 'todo-colours';
 
 .todo__input {
   font: 500 16px Roboto, sans-serif;
@@ -8,5 +8,5 @@
   padding-top: 8px;
   padding-bottom: 8px;
   border: 0;
-  background: $control-light-background-color;
+  background: todo-colours.$control-light-background-color;
 }
