--- a/apps/client/src/app/todos/internals/components/todo-checker/todo-checker.component.html
+++ b/apps/client/src/app/todos/internals/components/todo-checker/todo-checker.component.html
@@ -1,7 +1,7 @@
 <div class="todo">
-  <label class="todo__label" [ngClass]="{ 'todo--is-done': todo.isDone }"
-    >{{ todo.text }}
-    <input type="checkbox" [checked]="todo.isDone" (change)="emitToggle()" />
+  <label class="todo__label" [ngClass]="{ 'todo--is-done': todo().isDone }"
+    >{{ todo().text }}
+    <input type="checkbox" [checked]="todo().isDone" (change)="emitToggle()" />
     <span class="todo__checkmark"></span>
   </label>
 </div>
