--- a/apps/client/src/scss/todos/_todo-button.scss
+++ b/apps/client/src/scss/todos/_todo-button.scss
@@ -1,8 +1,8 @@
-@import './todo-colours';
+@use 'todo-colours';
 
 .todo__button--primary {
-  background: $primary;
-  color: $primary-text-color;
+  background: todo-colours.$primary;
+  color: todo-colours.$primary-text-color;
   padding: 8px 16px 8px 16px;
   border: 0;
   font: 300 16px Roboto, sans-serif;
