--- a/apps/client/src/scss/todos/_todo-checker.scss
+++ b/apps/client/src/scss/todos/_todo-checker.scss
@@ -1,4 +1,4 @@
-@import './todo-colours';
+@use 'todo-colours';
 
 .todo {
   position: relative;
@@ -15,12 +15,12 @@
   margin-top: 12px;
   margin-bottom: 12px;
   cursor: pointer;
-  color: $text-color;
+  color: todo-colours.$text-color;
   font-size: 22px;
   user-select: none;
 
   &:hover input ~ .todo__checkmark {
-    background-color: $control-background-color;
+    background-color: todo-colours.$control-background-color;
   }
 
   input {
@@ -31,7 +31,7 @@
     width: 0;
 
     &:checked ~ .todo__checkmark {
-      background-color: $primary;
+      background-color: todo-colours.$primary;
     }
 
     &:checked ~ .todo__checkmark:after {
@@ -51,7 +51,7 @@
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: $control-background-color;
+  background-color: todo-colours.$control-background-color;
 
   &:after {
     content: '';
