--- a/apps/client/src/scss/todos/_todo-typography.scss
+++ b/apps/client/src/scss/todos/_todo-typography.scss
@@ -1,4 +1,4 @@
-@import './todo-colours';
+@use 'todo-colours';
 
 .todo__h1 {
   text-align: center;
@@ -7,19 +7,19 @@
 
 .todo__text--emphasize {
   font-weight: 700;
-  color: $primary;
+  color: todo-colours.$primary;
   padding-right: 4px;
 }
 .todo__text--default {
-  color: $text-color;
+  color: todo-colours.$text-color;
 }
 
 a {
-  color: $primary;
+  color: todo-colours.$primary;
   text-decoration: none;
 
   &::visited {
-    color: $primary;
+    color: todo-colours.$primary;
   }
 
   &::hover {
